[package]
edition = "2021"
name = "panic-info-reader"
publish = false
version = "0.1.0"

[target.'cfg(target_os = "macos")'.dependencies]
plist = "1.5.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.51.1", features = [
    "Win32_System_WindowsProgramming",
], default-features = false }
