[package]
edition = "2021"
name = "panic-info-reader"
publish = false
version = "0.1.0"

[profile.release]
lto = true
opt-level = 3
strip = true

[dependencies]
plist = "1.8.0"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.0", features = [
    "Win32_System_WindowsProgramming",
], default-features = false }
windows-strings = { version = "0.5.0" }
